--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "bootstrap-vue": "^0.16.1",
     "vue": "^2.3.3",
+    "vue-awesome": "^2.3.1",
+    "vue-parallaxy": "^1.0.3",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
