--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.3.3",
     "vue-awesome": "^2.3.1",
     "vue-parallaxy": "^1.0.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-scroll-between": "0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
